 30. New Command "AutoAttack" for toggling auto attack.   Also available in Config.
 31. Players can now drop, get, etc all weapons, armor, items, or money.
 32. TOP/Pride stats now preserves previous-period stats.
 33. CRON jobs now support new intervals and better formula support (HELP CRON)
 34. New example script playerBackups.js for making player backups as cmare xml.

# Build 5.10.3 Release 01/01/2024
  *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
  1. New Paladin skills: Unholy Strike, Chaos Rage, Paladin's Fear, Paladin's Corruption
  2. New Paladin skills: Incite Fight, Dark Hammer, Paladin's Wickedness, Crushing Aura
  3. New Paladin skills: Craft Unholy Reaver, Righteous Defense, Exploiting Aura
  4. Paladin's can now be Anti-Paladins if they maintain chaotic evil.
  5. New Items: CubicGate, GenGiftContainer, GenTent, GenStove, Spear (polearm)
  6. New Achievement stuff: Tattoo reward type, ENTITLED achieve type
  7. Tattoos like 'RACE_*" or "CHARCLASS_*" now open up otherwise skill-restricted options.
  8. Liege xp bonus can no longer be gained from non-combat or role-playing xp vassel gains.
  9. New CharStat XPADJPCT - for adding bonus % xp (or loss if negative)
 10. Prop_NoPurge now supports an expiration date/timestamp
 11. New StdMob type: CombatDummy, for testing.
 12. New spells: Wizard's Mark, Suppress Aroma, Store Aromas
 13. New prayers: Undeath Guard, Animate Shadow, Animate Limb
 14. GOTITEM Achievement type now supports multiple item masks.
 15. New standard races: Ghast, Ghoul, Ghost, Mummy, Spectre, Vampire, and Zombie
 16. Undead race mixing now has its own special rules, which Prayer_Animate* will use
 17. WaterCurrents messaging can now be customized.
 18. Default days/month is now 24, default months/yr now 7.  Postmen retain mail for 40 months.
 19. GenRaces now support multiple natural weapon choices, better reflecting StdRaces.