@@ -34,6 +34,8 @@
  32. TOP/Pride stats now preserves previous-period stats.
  33. CRON jobs now support new intervals and better formula support (HELP CRON)
  34. New example script playerBackups.js for making player backups as cmare xml.
+ 35. New example script topMonthlyRpt.js for making TOP player reports every month.
+ 36. New example script topMonthlyAwards.js for giving TOP player awards every month.
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
